syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetKLRequest
{
	required RehabType rehabType = 1; //Qot_Common.RehabType,复权类型
	required KLType klType = 2; //Qot_Common.KLType,K线类型
	required Security security = 3; //股票
	required int32 reqNum = 4; //请求K线根数
}

message QotGetKLResponse
{
	required Security security = 1; //股票
	optional string name = 3; // 股票名称
	repeated KLine klList = 2; //k线点
}

message QotGetKLRequest_Internal
{
	required QotGetKLRequest payload = 1;
}

message QotGetKLResponse_Internal
{
	required RetType retType = 1 [default = RetType_Unknown]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetKLResponse payload = 4;
}
