syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetStaticInfoRequest
{
	// 注：当 market 和 code_list 同时存在时，会忽略 market，仅对 code_list 进行查询。
	optional QotMarket market = 1; //Qot_Common.QotMarket,股票市场
	optional SecurityType secType = 2; //Qot_Common.SecurityType,股票类型
	repeated Security securityList = 3; //股票，若该字段存在，忽略其他字段，只返回该字段股票的静态信息
}

message QotGetStaticInfoResponse
{
	repeated SecurityStaticInfo staticInfoList = 1; //静态信息
}

message QotGetStaticInfoRequest_Internal
{
	required QotGetStaticInfoRequest payload = 1;
}

message QotGetStaticInfoResponse_Internal
{
	required RetType retType = 1 [default = RetType_Unknown]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetStaticInfoResponse payload = 4;
}
