syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";

import "Trd_Common.proto";
import "Qot_Common.proto";

message MarginRatioInfo
{
	required Security security = 1; //股票
	optional bool   isLongPermit = 2; //是否允许融资
	optional bool   isShortPermit = 3; //是否允许融券
	optional double shortPoolRemain = 4; //卖空池剩余量
	optional double shortFeeRate = 5; //融券参考利率
	optional double alertLongRatio = 6; //融资预警比率
	optional double alertShortRatio = 7; //融券预警比率
	optional double imLongRatio = 8; //融资初始保证金率
	optional double imShortRatio = 9; //融券初始保证金率
	optional double mcmLongRatio = 10; //融资 margin call 保证金率
	optional double mcmShortRatio = 11; //融券 margin call 保证金率
	optional double mmLongRatio = 12; //融资维持保证金率
	optional double mmShortRatio = 13; //融券维持保证金率
}

message TrdGetMarginRatioRequest
{
	required TrdHeader header = 1; //交易公共参数头
	repeated Security securityList = 2; //股票
}

message TrdGetMarginRatioResponse
{
	required TrdHeader header = 1; //交易公共参数头
	repeated MarginRatioInfo marginRatioInfoList = 2; //账户资金
}

message TrdGetMarginRatioRequest_Internal
{
	required TrdGetMarginRatioRequest payload = 1;
}

message TrdGetMarginRatioResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required RetType retType = 1 [default = RetType_Unknown];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdGetMarginRatioResponse payload = 4;
}
