syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetBrokerRequest
{
	required Security security = 1; //股票
}

message QotGetBrokerResponse
{
	required Security security = 1; //股票
	optional string name = 4; // 股票名称
	repeated Broker brokerAskList = 2; //经纪Ask(卖)盘
	repeated Broker brokerBidList = 3; //经纪Bid(买)盘
}

message QotGetBrokerRequest_Internal
{
	required QotGetBrokerRequest payload = 1;
}

message QotGetBrokerResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;
	optional QotGetBrokerResponse payload = 4;
}
