syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetOwnerPlateRequest
{
	repeated Security securityList = 1; //股票
}

message SecurityOwnerPlate
{
	required Security security = 1; //股票
	optional string name = 3; // 股票名称
	repeated PlateInfo plateInfoList = 2; //所属板块
}

message QotGetOwnerPlateResponse
{
	repeated SecurityOwnerPlate ownerPlateList = 1; //所属板块信息
}

message QotGetOwnerPlateRequest_Internal
{
	required QotGetOwnerPlateRequest payload = 1;
}

message QotGetOwnerPlateResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetOwnerPlateResponse payload = 4;
}
