syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetPlateSetRequest
{
	required int32 market = 1; //Qot_Common.QotMarket,股票市场
	required int32 plateSetType = 2; //Qot_Common.PlateSetType,板块集合的类型
}

message QotGetPlateSetResponse
{
	repeated PlateInfo plateInfoList = 1; //板块集合下的板块信息
}

message QotGetPlateSetRequest_Internal
{
	required QotGetPlateSetRequest payload = 1;
}

message QotGetPlateSetResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetPlateSetResponse payload = 4;
}
