syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Qot_Common.proto";

message QotGetUserSecurityRequest
{
	required string groupName = 1; //分组名,有同名的返回排序首个
}

message QotGetUserSecurityResponse
{
	repeated SecurityStaticInfo staticInfoList = 1; //自选股分组下的股票列表
}

message QotGetUserSecurityRequest_Internal
{
	required QotGetUserSecurityRequest payload = 1;
}

message QotGetUserSecurityResponse_Internal
{
	required int32 retType = 1 [default = -400]; //RetType,返回结果
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional QotGetUserSecurityResponse payload = 4;
}
