syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Trd_Common.proto";

message TrdGetHistoryOrderFillListRequest
{
	required TrdHeader header = 1; //交易公共参数头
	required TrdFilterConditions filterConditions = 2; //过滤条件
}

message TrdGetHistoryOrderFillListResponse
{
	required TrdHeader header = 1; //交易公共参数头
	repeated OrderFill orderFillList = 2; //历史成交列表
}

message TrdGetHistoryOrderFillListRequest_Internal
{
	required TrdGetHistoryOrderFillListRequest payload = 1;
}

message TrdGetHistoryOrderFillListResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required int32 retType = 1 [default = -400];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdGetHistoryOrderFillListResponse payload = 4;
}
