syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Trd_Common.proto";

message TrdGetOrderFeeRequest
{
	required TrdHeader header = 1; //交易公共参数头
	repeated string orderIdExList = 2; // 服务器订单ID
}

message TrdGetOrderFeeResponse
{
	required TrdHeader header = 1; //交易公共参数头
	repeated OrderFee orderFeeList = 2; //订单费用列表
}

message TrdGetOrderFeeRequest_Internal
{
	required TrdGetOrderFeeRequest payload = 1;
}

message TrdGetOrderFeeResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required int32 retType = 1 [default = -400];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdGetOrderFeeResponse payload = 4;
}
