syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";
import "Trd_Common.proto";

message TrdGetOrderFillListRequest
{
	required TrdHeader header = 1; //交易公共参数头
	optional TrdFilterConditions filterConditions = 2; //过滤条件
	optional bool refreshCache = 3; //立即刷新OpenD缓存的此数据，默认不填。true向服务器获取最新数据更新缓存并返回；flase或没填则返回OpenD缓存的数据，不会向服务器请求。
	//正常情况下，服务器有更新就会立即推送到OpenD，OpenD缓存着数据，API请求过来，返回同步的缓存数据，一般不需要指定刷新缓存，保证快速返回且减少对服务器的压力
	//如果遇到丢包等情况，可能出现缓存数据与服务器不一致，用户如果发现数据更新有异样，可指定刷新缓存，解决数据同步的问题。
}

message TrdGetOrderFillListResponse
{
	required TrdHeader header = 1; //交易公共参数头
	repeated OrderFill orderFillList = 2; //成交列表
}

message TrdGetOrderFillListRequest_Internal
{
	required TrdGetOrderFillListRequest payload = 1;
}

message TrdGetOrderFillListResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required int32 retType = 1 [default = -400];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdGetOrderFillListResponse payload = 4;
}
