syntax = "proto2";
package futupb;
option java_package = "com.futu.openapi.pb";
option go_package = "github.com/santsai/futu-go/pb";

import "Common.proto";

message TrdSubAccPushRequest
{
	repeated uint64 accIDList = 1; //要接收推送数据的业务账号列表，全量非增量，即使用者请每次传需要接收推送数据的所有业务账号
}

message TrdSubAccPushResponse
{

}

message TrdSubAccPushRequest_Internal
{
	required TrdSubAccPushRequest payload = 1;
}

message TrdSubAccPushResponse_Internal
{
	//以下3个字段每条协议都有，注释说明在InitConnect.proto中
	required RetType retType = 1 [default = RetType_Unknown];
	optional string retMsg = 2;
	optional int32 errCode = 3;

	optional TrdSubAccPushResponse payload = 4;
}
